# AERO_Agent

./: .env  .gitignore  AIRPORT_FRONTLINE_BRIEFING.md  API_ACCEPTANCE_CHECKLIST.md  BSRC.json  Bird Strike Risk Classification.md  CLAUDE.md  CLAUDE_DEV.md  OPTIMIZATION_PLAN.md  README.md  Radiotelephony_ATC.json  TERMINAL_FIX_REPORT.md  environment.yml  fod_rule.json  install.sh  mypy_report.txt  oil_spill_test_samples.json  oil_spill_test_samples.txt  pyproject.toml  quick_test_agent.py  start.sh  test.md  test_dialogue_example.py  test_oil_spill_samples.py  test_terminal_improvement.py  toairport.md  机场特情agent系统.md
.claude/: settings.local.json
agent/: __init__.py  circuit_breaker.py  exceptions.py  graph.py  llm_guard.py  retry.py  state.py  types.py
airport_emergency_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
apps/: __init__.py  run_agent.py
config/: __init__.py  airline_codes.py  llm_config.py  logging_config.py  settings.py  validation_config.py
constraints/: __init__.py  checker.py  loader.py
data/: BSRC.json
demos/: demo_flight_impact.py  demo_get_weather.py  demo_position_impact.py  demo_weather_impact.py
docs/: AGENT_PROMPT_UPDATE_SUMMARY.md  AIRPORT_TOPOLOGY_FROM_RAW.md  ATC_NORMALIZATION.md  AWOS_WEATHER_PROCESSING.md  COMPREHENSIVE_ANALYSIS_TOOL.md  COMPREHENSIVE_TOOL_FIXES.md  DIALOGUE_ROLE_CHANGE.md  DSL_PLAN.md  DYNAMIC_TIME_WINDOW.md  FIX_FLIGHT_NO_REDUNDANT_ASK.md  FOD_REASSESSMENT.md  FRONTEND_DEMO_PLAN.md  FRONTEND_FIXES_SUMMARY.md  GET_WEATHER_TOOL.md  IMPROVEMENT_PLAN.md  IMPROVEMENT_PLAN_UPDATED.md  INTELLIGENCE_ASSESSMENT.md  OIL_SPILL_WORKFLOW_GUIDE.md  PROMPT_UPDATE_VERIFICATION.md  PULL_REQUEST_TEMPLATE.md  README.md  REPORT_CLASSIFICATION.md  SCENARIO_FIELD_CONTRACTS.md  SCENARIO_FIELD_FILTERING_VERIFICATION.md  STAGE1_COMPLETION_REPORT.md  TOPOLOGY_CORRECTION_SUMMARY.md  TOPOLOGY_INTEGRATION_SUMMARY.md  USAGE_MONITOR_GUIDE.md  bugfix_position_checklist.md  bugfix_recursion_limit.md  报告数据来源分析.md  机坪漏油检查单_dsl_与_ui_表单设计.md
(+232 files in other folders)
